--- a/operator/config/manifests/bases/rhacs-operator.clusterserviceversion.yaml
+++ b/operator/config/manifests/bases/rhacs-operator.clusterserviceversion.yaml
@@ -83,7 +83,8 @@ spec:
         displayName: Persistent volume claim
         path: central.persistence.persistentVolumeClaim
       - description: The name of the PVC to manage persistent data. If no PVC with
-          the given name exists, it will be created.
+          the given name exists, it will be created. Defaults to "stackrox-db" if
+          not set.
         displayName: Claim Name
         path: central.persistence.persistentVolumeClaim.claimName
       - description: Specifies if Telemetry is enabled.
@@ -263,9 +264,8 @@ spec:
         displayName: TLS
         path: tls
       - description: Configures how Central should store its persistent data. You
-          can choose between using a persistent volume claim, and a host path. Central
-          persistent storage is deprecated for installation. Existing customers may
-          continue using it for restoration from legacy RocksDB backups.
+          can choose between using a persistent volume claim (recommended default),
+          and a host path.
         displayName: Persistence
         path: central.persistence
       - description: Additional image pull secrets to be taken into account for pulling
