--- a/operator/config/manifests/bases/rhacs-operator.clusterserviceversion.yaml
+++ b/operator/config/manifests/bases/rhacs-operator.clusterserviceversion.yaml
@@ -564,8 +564,8 @@ spec:
         displayName: Environment Variables
         path: customize.envVars
       - description: Settings for the Node-Inventory container, which is responsible
-          for scanning the Nodes' filesystem
-        displayName: Node Scanner Settings
+          for scanning the Nodes' filesystem.
+        displayName: Node Scanning Settings
         path: perNode.nodeInventory
       - displayName: Autoscaling Minimum Replicas
         path: scanner.analyzer.scaling.minReplicas
