--- a/pkg/helm/charts/tests/centralservices/testdata/helmtest/sccs.test.yaml
+++ b/pkg/helm/charts/tests/centralservices/testdata/helmtest/sccs.test.yaml
@@ -1,6 +1,10 @@
 server:
   visibleSchemas:
   - openshift-4.1.0
+values:
+  central:
+    persistence:
+      none: true
 tests:
 - name: Should create SCCs
   expect: |
