--- a/pkg/helm/charts/tests/centralservices/testdata/helmtest/declarative-configuration.test.yaml
+++ b/pkg/helm/charts/tests/centralservices/testdata/helmtest/declarative-configuration.test.yaml
@@ -1,3 +1,7 @@
+values:
+  central:
+    persistence:
+      none: true
 tests:
 - name: "Empty declarative configuration mounts shouldn't lead to additional volume mounts"
   expect: |
