--- a/pkg/helm/charts/tests/centralservices/testdata/helmtest/monitoring.test.yaml
+++ b/pkg/helm/charts/tests/centralservices/testdata/helmtest/monitoring.test.yaml
@@ -1,3 +1,7 @@
+values:
+  central:
+    persistence:
+      none: true
 tests:
 - name: Central monitoring should not be exposed by default
   expect: |
