--- a/pkg/helm/charts/tests/centralservices/testdata/helmtest/openshift-autosense.test.yaml
+++ b/pkg/helm/charts/tests/centralservices/testdata/helmtest/openshift-autosense.test.yaml
@@ -1,3 +1,7 @@
+values:
+  central:
+    persistence:
+      none: true
 tests:
 - name: "Detect OpenShift 3 if no openshift server resources are not visible"
   set:
