--- a/pkg/helm/charts/tests/centralservices/testdata/helmtest/openshift-monitoring.test.yaml
+++ b/pkg/helm/charts/tests/centralservices/testdata/helmtest/openshift-monitoring.test.yaml
@@ -2,6 +2,10 @@ server:
   availableSchemas:
   - openshift-4.1.0
   - com.coreos
+values:
+  central:
+    persistence:
+      none: true
 tests:
 - name: "When enabled"
   set:
