--- a/pkg/helm/charts/tests/centralservices/testdata/helmtest/persistence.test.yaml
+++ b/pkg/helm/charts/tests/centralservices/testdata/helmtest/persistence.test.yaml
@@ -14,6 +14,8 @@ tests:
 - name: "Should create central-db PVC"
   values:
     central:
+      persistence:
+        none: true
       db:
         persistence:
           persistentVolumeClaim:
