--- a/pkg/helm/charts/tests/centralservices/testdata/helmtest/telemetry.test.yaml
+++ b/pkg/helm/charts/tests/centralservices/testdata/helmtest/telemetry.test.yaml
@@ -4,6 +4,10 @@ defs: |
 
   def envVars(obj; container):
   container(obj; container) | .env | from_entries;
+values:
+  central:
+    persistence:
+      none: true
 
 tests:
   - name: Central telemetry should not be enabled by default
