--- a/.github/workflows/check-pr-title.yaml
+++ b/.github/workflows/check-pr-title.yaml
@@ -24,7 +24,7 @@ jobs:
           test_regex "ROX-123: text"
           test_regex "ROX-123, RS-45: text"
           test_regex "refactor: text"
-          text_regex "fix(ui): text"
+          test_regex "fix(ui): text"
           test_regex "feat(api)!: text"
 
           if ! test_regex "$PR_TITLE"
