--- a/operator/tests/central/basic-central/10-assert.yaml
+++ b/operator/tests/central/basic-central/10-assert.yaml
@@ -76,6 +76,22 @@ data:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  name: stackrox-db
+  ownerReferences:
+  - apiVersion: platform.stackrox.io/v1alpha1
+    kind: Central
+    name: stackrox-central-services
+    controller: true
+spec:
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 100Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
   name: central-db
 spec:
   accessModes:
