--- a/operator/tests/central/basic-central/90-assert.yaml
+++ b/operator/tests/central/basic-central/90-assert.yaml
@@ -126,6 +126,8 @@ spec:
           name: central-external-db
           optional: true
         name: central-external-db-volume
+      - name: stackrox-db
+        emptyDir: {}
       - name: config-map-1
         configMap:
           name: config-map-1
