--- a/operator/tests/central/basic-central/100-assert.yaml
+++ b/operator/tests/central/basic-central/100-assert.yaml
@@ -1,18 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: stackrox-db
-spec:
-  accessModes:
-  - ReadWriteOnce
-  resources:
-    requests:
-      storage: 100Gi
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: stackrox-db
+  name: central-db
 spec:
   accessModes:
   - ReadWriteOnce
