--- a/.github/workflows/check-pr-title.yaml
+++ b/.github/workflows/check-pr-title.yaml
@@ -7,14 +7,14 @@ on:
 jobs:
   check-title:
     runs-on: ubuntu-latest
+    env:
+      PR_TITLE: ${{ github.event.pull_request.title }}
     steps:
       - name: Check if the PR title is well dressed
         env:
-          PR_TITLE: ${{ github.event.pull_request.title }}
           CONV: '(build|chore|ci|docs|feat|fix|perf|refactor|revert|style|test)(\([\w\-\.]+\))?!?'
           JIRA: '([A-Z]+-[0-9]+, ?)*[A-Z]+-[0-9]+'
           TEXT: ': .+'
-          LENGTH: '70'
         run: |
           # Either conventional or JIRA-nnn prefix followed by ': ' and random text:
           REGEX="(($CONV)|($JIRA))($TEXT)"
@@ -33,6 +33,11 @@ jobs:
             exit 1
           fi
 
+      - name: Check PR title length
+        if: github.event.pull_request.user.login != 'dependabot[bot]'
+        env:
+          LENGTH: '70'
+        run: |
           TITLE_LENGTH="$(echo -nE "$PR_TITLE" | wc --chars)"
           if [ "$TITLE_LENGTH" -gt "$LENGTH" ]
           then
