--- a/.github/workflows/vuln-check.yml
+++ b/.github/workflows/vuln-check.yml
@@ -14,4 +14,4 @@ jobs:
     - name: Install govulncheck
       run: go install golang.org/x/vuln/cmd/govulncheck@latest
     - name: Run govulncheck
-      run: govulncheck ./...
+      run: $(go env GOPATH)/bin/govulncheck ./...
