--- a/image/templates/helm/stackrox-central/templates/01-central-14-service.yaml
+++ b/image/templates/helm/stackrox-central/templates/01-central-14-service.yaml
@@ -9,6 +9,7 @@ metadata:
     {{- include "srox.labels" (list . "service" "central") | nindent 4 }}
   annotations:
     {{- include "srox.annotations" (list . "service" "central") | nindent 4 }}
+    service.beta.openshift.io/serving-cert-secret-name: monitoring-tls
 spec:
   ports:
     {{- toYaml ._rox.central._servicePorts | nindent 4 }}
