ROX-16557: Stop creating stackrox-db on installation - operator (#5763)
Co-authored-by: Marcin Owsiany <porridge@redhat.com>
Co-authored-by: Connor Gorman <connorgorman@users.noreply.github.com>

--- a/operator/tests/upgrade/upgrade/25-errors.yaml
+++ b/operator/tests/upgrade/upgrade/25-errors.yaml
@@ -1,7 +1,14 @@
-apiVersion: v1
-kind: Secret
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: proxy-config
+  name: central
+spec:
+  template:
+    spec:
+      volumes:
+      - name: stackrox-db
+        persistentVolumeClaim:
+          claimName: stackrox-db
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -12,9 +19,3 @@ metadata:
     kind: Central
     name: stackrox-central-services
     controller: true
-spec:
-  accessModes:
-  - ReadWriteOnce
-  resources:
-    requests:
-      storage: 100Gi
