--- a/operator/tests/central/basic-central/90-assert.yaml
+++ b/operator/tests/central/basic-central/90-assert.yaml
@@ -127,8 +127,7 @@ spec:
           optional: true
         name: central-external-db-volume
       - name: stackrox-db
-        persistentVolumeClaim:
-          claimName: stackrox-db
+        emptyDir: {}
       - name: config-map-1
         configMap:
           name: config-map-1
