--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -18,11 +18,8 @@ jobs:
         gotags: [ 'GOTAGS=""', 'GOTAGS=release' ]
     runs-on: ubuntu-latest
     container:
-      image: quay.io/stackrox-io/apollo-ci:stackrox-test-0.3.59
+      image: quay.io/stackrox-io/apollo-ci:stackrox-test-user-0.3.59-5-g8653da908f
     steps:
-    - name: Create user
-      run: useradd tester
-
     - name: Checkout
       uses: actions/checkout@v3
       with:
@@ -37,7 +34,7 @@ jobs:
       uses: ./.github/actions/cache-go-dependencies
 
     - name: Go Unit Tests
-      run: su tester -c "${{ matrix.gotags }} make go-unit-tests"
+      run: ${{ matrix.gotags }} make go-unit-tests
 
     - name: Generate junit report
       if: always()
@@ -75,7 +72,7 @@ jobs:
         gotags: [ 'GOTAGS=""', 'GOTAGS=release' ]
     runs-on: ubuntu-latest
     container:
-      image: quay.io/stackrox-io/apollo-ci:stackrox-test-0.3.59
+      image: quay.io/stackrox-io/apollo-ci:stackrox-test-user-0.3.59-5-g8653da908f
     steps:
     - name: Checkout
       uses: actions/checkout@v3
@@ -121,7 +118,7 @@ jobs:
   ui:
     runs-on: ubuntu-latest
     container:
-      image: quay.io/stackrox-io/apollo-ci:stackrox-test-0.3.59
+      image: quay.io/stackrox-io/apollo-ci:stackrox-test-user-0.3.59-5-g8653da908f
     steps:
     - name: Checkout
       uses: actions/checkout@v3
@@ -156,7 +153,7 @@ jobs:
   local-roxctl-tests:
     runs-on: ubuntu-latest
     container:
-      image: quay.io/stackrox-io/apollo-ci:stackrox-test-0.3.59
+      image: quay.io/stackrox-io/apollo-ci:stackrox-test-user-0.3.59-5-g8653da908f
     steps:
     - name: Checkout
       uses: actions/checkout@v3
