--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -39,7 +39,7 @@ jobs:
 
     - name: Go Unit Tests
       run: |
-        chmod a+w .
+        chmod a+w . roxctl/connectivity-map/testdata
         su tester -c "${{ matrix.gotags }} make go-unit-tests"
 
     - name: Generate junit report
