chore(ci): update periodic Scanner bump PR title

--- a/.github/workflows/update_scanner_periodic.yaml
+++ b/.github/workflows/update_scanner_periodic.yaml
@@ -30,7 +30,7 @@ jobs:
         branch: update_scanner_version
         signoff: false
         delete-branch: true
-        title: Update SCANNER_VERSION
+        title: 'chore(scanner): Update SCANNER_VERSION'
         body: |
           Weekly update of SCANNER_VERSION to latest master version
         labels: |
