[feat] add support for affinities and tolerations

--- a/image/templates/helm/shared/internal/scanner-config-shape.yaml
+++ b/image/templates/helm/shared/internal/scanner-config-shape.yaml
@@ -11,6 +11,7 @@ scanner:
     disable: null # bool
     minReplicas: null # int
     maxReplicas: null # int
+  affinity: null # dict
   resources: null # string | dict
   image:
     registry: null # string
