--- a/image/templates/helm/stackrox-secured-cluster/templates/admission-controller.yaml
+++ b/image/templates/helm/stackrox-secured-cluster/templates/admission-controller.yaml
@@ -33,29 +33,7 @@ spec:
         {{- toYaml ._rox.admissionControl.tolerations | nindent 8 }}
       {{- end }}
       affinity:
-        nodeAffinity:
-          preferredDuringSchedulingIgnoredDuringExecution:
-            # node-role.kubernetes.io/master is replaced by node-role.kubernetes.io/control-plane from certain version
-            # of k8s. We apply both to be compatible with any k8s version.
-            - weight: 50
-              preference:
-                matchExpressions:
-                  - key: node-role.kubernetes.io/master
-                    operator: Exists
-            - weight: 50
-              preference:
-                matchExpressions:
-                  - key: node-role.kubernetes.io/control-plane
-                    operator: Exists
-        podAntiAffinity:
-          preferredDuringSchedulingIgnoredDuringExecution:
-            - weight: 60
-              podAffinityTerm:
-                namespaces: ["stackrox"]
-                topologyKey: "kubernetes.io/hostname"
-                labelSelector:
-                  matchLabels:
-                    app: admission-control
+        {{- toYaml ._rox.admissionControl.affinity | nindent 8 }}
       {{- if ._rox.admissionControl._nodeSelector }}
       nodeSelector:
         {{- ._rox.admissionControl._nodeSelector | nindent 8 }}
